# rusty-sorts

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  test.rs
